fixed overflow on available services list.
git-svn-id: https://svn.duraspace.org/duracloud/trunk@193 1005ed41-97cd-4a8f-848c-be5b5fe45bcb

--- a/duradmin/src/main/webapp/style/dialogs.css
+++ b/duradmin/src/main/webapp/style/dialogs.css
@@ -134,9 +134,11 @@
 	margin-bottom:10px;
 }
 
+
 #dc-item-list-wrapper,
 #dc-service-detail-wrapper
 {
+	overflow: auto;	
 	float:left;
 	margin-right:10px;
 	width:300px !important;
